<resources>
    <string name="app_name">PetApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Password">Contraseña</string>
    <string name="title_activity_pagos">Pagos</string>
    <string name="Header_pagos">Información de tarjeta</string>
    <string name="EjemploTarjeta">xxxx-xxxx-xxxx-xxxx</string>
    <string name="Nombre_Tarjeta">Nombre</string>
    <string name="mes">Mes</string>
    <string name="year_tarjeta">Año</string>
    <string name="CVV">CVV</string>
    <string name="Scanear">Escanear</string>
</resources>