<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Pagos">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        Cardview:cardBackgroundColor="@color/icons"
        Cardview:cardCornerRadius="6dp"
        Cardview:cardElevation="10dp"
        Cardview:cardPreventCornerOverlap="true"
        Cardview:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Header_pagos"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/no_tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/EjemploTarjeta"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/secondary_text" />

            <EditText
                android:id="@+id/Nombre_tarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Nombre_Tarjeta"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/secondary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mes_tarjeta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mes"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/secondary_text" />

                <EditText
                    android:id="@+id/year_tarjeta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/year_tarjeta"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/secondary_text" />

                <EditText
                    android:id="@+id/CVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/CVV"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/secondary_text" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Scanear" />


</android.support.design.widget.CoordinatorLayout>
